# remote-code

./: .gitignore  .rcode.yml  pyproject.toml  test.yml
remote_code/ansible/installer_playbook/: configuration.yaml  install_code_server.yaml
remote_code/ansible/plugins/: cpp.yaml  go.yaml  python.yaml
remote_code/cli/: __main__.py  ansible_wrapper.py  config_builder.py  config_data.py  infra.py  ssh_utils.py
remote_code/plugins/: __init__.py  cpp_plugin.py  installer.py  python_plugin.py
remote_code/tf/: .gitignore  .terraform.lock.hcl  create_ansible_inventory.tf  get_python_binary.sh  keys.tf  main.tf  outputs.tf  vars.tf  vm.tf  vpc.tf
